# River-Points-Tracker-CLI-

./: README.md  pyproject.toml
src/river_points/: calculator.py  cli.py
tests/: test_calculator.py
